# poetry-deps-scanner

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  comment_gitlab.py  pyproject.toml  scan_deps.py
deps_scanner/: scan_deps.py
poetry_deps_scanner/: comment_gitlab.py  scan_deps.py
src/: comment_gitlab.py  scan_deps.py
