[tool.poetry]
name = "deps-scanner"
version = "1.0.0"
description = "Analyse poetry dependencies and comment on gitlab"
readme = "README.md"
authors = ["Gabriel Augendre <gabriel@augendre.info>"]
homepage = "https://git.itsf.io/it4nw/libs/deps-scanner"

[tool.poetry.dependencies]
python = ">=3.7"
semver = ">=3.0.0-dev.2"
toml = ">=0.10.2"
requests = ">=2.25.1"
python-gitlab = ">=2.6.0"

[tool.poetry.dev-dependencies]
pytest = ">=6.2.2"
pre-commit = ">=2.11.1"
pdbpp = ">=0.10.2"

[tool.poetry.scripts]
comment-gitlab = "deps_scanner.comment_gitlab:main"
scan-deps = "deps_scanner.scan_deps:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
target-version = ['py37']

[tool.isort]
profile = "black"
